# ordr-backend

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
setup-client/: Cargo.toml  Readme.md
setup-client/src/: main.rs
src/: config.rs  lib.rs  main.rs  ws.rs
src/api/: mod.rs
src/api/handlers/: health.rs  makers.rs  match_order.rs  mod.rs  orderbook.rs  orders.rs  trades.rs  ws.rs
src/db/: migrations.rs  mod.rs  pool.rs  queries.rs
src/engine/: fill_plan.rs  matcher.rs  mod.rs  transaction.rs
src/indexer/: grpc_subscriber.rs  mod.rs  order.rs  parser.rs  subscriber.rs  sync.rs
src/types/: mod.rs  order.rs
