[package]
name = "ordr-backend"
version = "0.1.0"
edition = "2021"
description = "Indexer, engine, and API for Ordr.trade continuous mode CLOB"
default-run = "ordr-backend"

[dependencies]
tokio = { version = "1", features = ["full"] }
solana-client = "2.2"
solana-account-decoder = "2.2"
spl-associated-token-account = "6"
dirs = "6"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bs58 = "0.5"
tungstenite = "0.24"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
url = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
thiserror = "2"
anyhow = "1"
solana-pubkey = "2.2"
solana-message = "2.2"
solana-transaction = "2.2"
solana-instruction = "2.2"
solana-commitment-config = "2.2"
axum = "0.8.8"
base64 = "0.22.1"
bincode = "1"

# [[bin]]
# name = "test_engine"
# path = "src/bin/test_engine.rs"
